Bug 42656 - ALC861 HD Audio on ATI IXP SB4x0 stopped working from 3.1.x to 3.2.x
Summary: ALC861 HD Audio on ATI IXP SB4x0 stopped working from 3.1.x to 3.2.x
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-25 20:51 UTC by richardt
Modified: 2012-06-13 15:14 UTC (History)
4 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
output from alsa-info.sh from kernel 3.1.10 (20.91 KB, text/plain)
2012-01-25 20:51 UTC, richardt
Details
output from alsa-info.sh from kernel 3.2.0-rc1 (18.25 KB, text/plain)
2012-01-25 20:54 UTC, richardt
Details
Fix patch (1.15 KB, patch)
2012-01-26 15:00 UTC, Takashi Iwai
Details | Diff

Description richardt 2012-01-25 20:51:26 UTC
Created attachment 72192 [details]
output from alsa-info.sh from kernel 3.1.10

After I've upgraded my kernel from 3.1.0 to 3.2.x, I have lost sound on my Haier W18 (ancient) laptop. All kernel from 3.1.x work fine, whereas kernels 3.2.x and 3.3-rc1 fail to work. 

All sound players (aplay, mplayer) run fine without any errors, but there's just no sound. Userspace is alsa-base 1.0.23+dfsg-4 from debian sid (i386).

There's no difference whether the sound drivers are compiled as modules or in the directly in the kernel.

Initial contact with tiwai shows that this is similar to #42588
https://bugzilla.kernel.org/show_bug.cgi?id=42588
Comment 1 richardt 2012-01-25 20:54:30 UTC
Created attachment 72193 [details]
output from alsa-info.sh from kernel 3.2.0-rc1

Added the output from the alsa-info.sh command for the 3.2.0-rc1 kernel where there's no sound
Comment 2 richardt 2012-01-26 14:46:44 UTC
Updated title (copy/paste error)
Comment 3 Takashi Iwai 2012-01-26 15:00:20 UTC
I added the following fix patch in sound git tree.
Comment 4 Takashi Iwai 2012-01-26 15:00:44 UTC
Created attachment 72205 [details]
Fix patch
Comment 5 Florian Mickler 2012-02-01 21:01:33 UTC
A patch referencing this bug report has been merged in Linux v3.3-rc2:

commit b3a81520bd37a28f77cb0f7002086fb14061824d
Author: Takashi Iwai <tiwai@suse.de>
Date:   Thu Jan 26 15:56:16 2012 +0100

    ALSA: hda - Fix silent output on Haier W18 laptop

Note You need to log in before you can comment on or make changes to this bug.