patch_realtek.c
@@ -30408,6 +30408,19 @@ comma
 id|SND_PCI_QUIRK
 c_func
 (paren
+l_int|0x1584
+comma
+l_int|0x2b01
+comma
+l_string|&quot;Haier W18&quot;
+comma
+id|PINFIX_ASUS_A6RP
+)paren
+comma
+"&t;"
+id|SND_PCI_QUIRK
+c_func
+(paren
 l_int|0x1734
 comma
 l_int|0x10c7
